--- a/noldest's_recreation_of_junferno's_desmos_renderer.ipynb
+++ b/noldest's_recreation_of_junferno's_desmos_renderer.ipynb
@@ -354,7 +354,7 @@
         "# Convert PNG to PNM using ImageMagick\n",
         "# I used this guys tutorial: https://www.youtube.com/watch?v=NUug23druVg\n",
         "\n",
-        "# UPDATE: THIS THING SUCKS OMG IT'S SO SLOW\n",
+        "# UPDATE: THIS THING SUCKS IT'S SO SLOW\n",
         "# I COMMENTED OUT THIS BLOCK, USE THE CV2 METHOD IN THE NEXT BLOCK\n",
         "\n",
         "\n",
@@ -972,7 +972,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1W1h90V2vQLZm_D327BlVn7YeZjgAWejW",
-      "authorship_tag": "ABX9TyMrj7/yPDRNN5hRaGHNV7T5",
+      "authorship_tag": "ABX9TyMd+svQlJhERz/qwUIaUsYS",
       "include_colab_link": true
     },
     "kernelspec": {
